removed drag drop for mobile, fixed folder expand collapse error

--- a/snd/mobile.css
+++ b/snd/mobile.css
@@ -1,5 +1,5 @@
 @media (max-width: 900px) {
-    .log {
+    #logBtn {
         display: none;
     }
 
